Resources, StreamDecoder: use InputStream.readAllBytes instead of IOUtils (#9646)
Replaces Apache Commons IOUtils.toByteArray with Java 9+
InputStream.readAllBytes:

1. Resources.readResourceBytes: widely used utility for reading
classpath resources
2. StreamDecoder.decodeStreamAndAppendNewline: used for charset
detection and config file decoding (2 call sites)

Simplifies code and removes Apache Commons IO dependency from these
files.

---

Prompt:
```
Any IOUtils or similar calls we should get rid of?
```